Revert "feat: Deduct points and display penalty for wrong answers."
This reverts commit e29603672247f24e37d56d7f658913110b3f47d0.

--- a/games/png-vs-jpg.html
+++ b/games/png-vs-jpg.html
@@ -1027,8 +1027,7 @@
                 score += points;
             } else {
                 feedbackIcon.textContent = '✗';
-                feedbackText.innerHTML = `Wrong!<br><span style="font-size: 1rem">-${MAX_SCORE_PER_ROUND} points</span>`;
-                score -= MAX_SCORE_PER_ROUND;
+                feedbackText.textContent = 'Wrong!';
             }
 
             document.getElementById('score').textContent = score;
