Adding click speed test game

--- a/games/index.html
+++ b/games/index.html
@@ -270,6 +270,12 @@
                 <a href="hypnotizer.html" class="btn">PLAY NOW</a>
             </div>
 
+            <div class="game-card">
+                <h2>⚡ Click Speed Test</h2>
+                <p>Test your clicking speed with this simple game. Click as many times as you can in the given time.</p>
+                <a href="click-speed-test.html" class="btn">PLAY NOW</a>
+            </div>
+
         </div>
 
         <div style="text-align: center; width: 100%;">
