--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -16,13 +16,6 @@
         gtag('config', 'G-6RNVL7JZVJ');
     </script>
 
-    <!-- React and ReactDOM -->
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-
-    <!-- Babel (to compile JSX in the browser) -->
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -31,6 +24,11 @@
     <script src="https://apis.google.com/js/api.js" async defer></script>
 
     <style>
+        /* Custom Utilities */
+        .hidden {
+            display: none !important;
+        }
+
         @keyframes spin {
             from {
                 transform: rotate(0deg);
@@ -44,16 +42,211 @@
         .animate-spin {
             animation: spin 1s linear infinite;
         }
+
+        /* Smooth fade transitions */
+        .fade-enter {
+            opacity: 0;
+            transition: opacity 0.3s ease-in-out;
+        }
+
+        .fade-enter-active {
+            opacity: 1;
+        }
     </style>
 </head>
 
-<body class="bg-slate-50 text-slate-900 font-sans">
+<body class="bg-slate-50 text-slate-900 font-sans min-h-screen flex flex-col">
 
-    <!-- React App Mount Point -->
-    <div id="root"></div>
+    <!-- Header -->
+    <header class="bg-white border-b border-slate-200 sticky top-0 z-10 shadow-sm">
+        <div class="max-w-6xl mx-auto px-4 h-16 flex items-center justify-between">
+            <div class="flex items-center gap-2">
+                <div class="bg-red-600 p-2 rounded-lg text-white">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M17 14V2" />
+                        <path
+                            d="M9 18.12 10 14H4.17a2 2 0 0 1-1.92-2.56l2.33-8A2 2 0 0 1 6.5 2H20a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.76a2 2 0 0 0-1.79 1.11L12 22h0a3.13 3.13 0 0 1-3-3.88Z" />
+                    </svg>
+                </div>
+                <h1 class="text-xl font-bold bg-gradient-to-r from-red-600 to-red-500 bg-clip-text text-transparent">
+                    YouTube Dislikes
+                </h1>
+            </div>
 
-    <!-- Link to your external script -->
-    <script type="text/babel" src="app.js"></script>
+            <div class="flex items-center gap-4">
+                <!-- Authenticated State Indicator -->
+                <div id="auth-indicator"
+                    class="hidden md:flex items-center gap-2 text-sm text-slate-500 bg-slate-100 px-3 py-1.5 rounded-full">
+                    <span class="w-2 h-2 rounded-full bg-green-500 animate-pulse"></span>
+                    Authenticated
+                </div>
+
+                <!-- Sign In Button -->
+                <button id="auth-button" disabled
+                    class="flex items-center gap-2 px-4 py-2 rounded-lg font-medium transition-all bg-slate-200 text-slate-400 cursor-not-allowed">
+                    <svg id="auth-icon-loading" class="animate-spin" xmlns="http://www.w3.org/2000/svg" width="18"
+                        height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M21 12a9 9 0 1 1-6.219-8.56" />
+                    </svg>
+                    <svg id="auth-icon-login" class="hidden" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+                        viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4" />
+                        <polyline points="10 17 15 12 10 7" />
+                        <line x1="15" x2="3" y1="12" y2="12" />
+                    </svg>
+                    <span id="auth-text">Loading API...</span>
+                </button>
+            </div>
+        </div>
+    </header>
+
+    <main class="max-w-6xl mx-auto px-4 py-8 flex-grow w-full">
+
+        <!-- Error Container -->
+        <div id="error-container"
+            class="hidden mb-6 bg-red-50 border border-red-200 rounded-xl p-4 flex items-start gap-3 text-red-700">
+            <svg class="mt-0.5 shrink-0" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="12" r="10" />
+                <line x1="12" x2="12" y1="8" y2="12" />
+                <line x1="12" x2="12.01" y1="16" y2="16" />
+            </svg>
+            <div>
+                <h3 class="font-semibold">Something went wrong</h3>
+                <p id="error-message" class="text-sm opacity-90"></p>
+            </div>
+        </div>
+
+        <!-- View: Welcome / Login -->
+        <div id="view-welcome" class="flex flex-col items-center justify-center py-20 text-center">
+            <div class="w-24 h-24 bg-red-100 rounded-full flex items-center justify-center text-red-500 mb-6">
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M17 14V2" />
+                    <path
+                        d="M9 18.12 10 14H4.17a2 2 0 0 1-1.92-2.56l2.33-8A2 2 0 0 1 6.5 2H20a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.76a2 2 0 0 0-1.79 1.11L12 22h0a3.13 3.13 0 0 1-3-3.88Z" />
+                </svg>
+            </div>
+            <h2 class="text-3xl font-bold text-slate-800 mb-3">Your Disliked Videos</h2>
+            <p class="text-slate-500 max-w-md mx-auto mb-8">
+                Sign in to view a list of the last 50 videos you've disliked on YouTube. This tool uses the official
+                YouTube API to fetch your private rating history.
+            </p>
+            <button id="hero-auth-button" disabled
+                class="px-8 py-3 rounded-full font-bold text-lg transition-all transform hover:-translate-y-1 bg-slate-200 text-slate-400 cursor-not-allowed">
+                Initializing...
+            </button>
+            <p class="mt-4 text-xs text-slate-400">Read-only access required.</p>
+        </div>
+
+        <!-- View: App Content (Hidden Initially) -->
+        <div id="view-content" class="hidden">
+            <!-- Controls -->
+            <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center gap-4 mb-8">
+                <div>
+                    <h2 class="text-2xl font-bold text-slate-800">Recent Dislikes</h2>
+                    <p id="results-count" class="text-slate-500">Showing 0 videos</p>
+                </div>
+
+                <div class="relative w-full sm:w-72">
+                    <input type="text" id="search-input" placeholder="Search titles or channels..."
+                        class="w-full pl-10 pr-4 py-2.5 bg-white border border-slate-200 rounded-xl focus:ring-2 focus:ring-red-500 focus:border-red-500 outline-none transition-all shadow-sm">
+                    <div class="absolute left-3 top-3 text-slate-400">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <circle cx="11" cy="11" r="8" />
+                            <path d="m21 21-4.3-4.3" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Loader -->
+            <div id="content-loader" class="hidden flex flex-col items-center justify-center py-20 text-slate-400">
+                <svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"
+                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M21 12a9 9 0 1 1-6.219-8.56" />
+                </svg>
+                <p class="mt-4">Fetching your dislikes...</p>
+            </div>
+
+            <!-- Empty State -->
+            <div id="empty-state"
+                class="hidden text-center py-20 bg-white rounded-2xl border border-dashed border-slate-300">
+                <p class="text-lg text-slate-500">No disliked videos found (or access denied).</p>
+            </div>
+
+            <!-- Video Grid -->
+            <div id="video-grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                <!-- Videos will be injected here -->
+            </div>
+        </div>
+    </main>
+
+    <!-- Templates -->
+    <template id="video-card-template">
+        <div
+            class="group bg-white rounded-xl border border-slate-200 overflow-hidden hover:shadow-xl transition-all duration-300 flex flex-col h-full">
+            <div class="relative aspect-video bg-slate-100 overflow-hidden">
+                <img class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500 video-thumbnail"
+                    src="" alt="">
+                <a href="" target="_blank" rel="noreferrer"
+                    class="video-link absolute inset-0 bg-black/0 group-hover:bg-black/10 transition-colors flex items-center justify-center opacity-0 group-hover:opacity-100">
+                    <div
+                        class="bg-red-600 text-white p-3 rounded-full shadow-lg transform scale-90 group-hover:scale-100 transition-all">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
+                            <polyline points="15 3 21 3 21 9" />
+                            <line x1="10" x2="21" y1="14" y2="3" />
+                        </svg>
+                    </div>
+                </a>
+            </div>
+
+            <div class="p-4 flex flex-col flex-grow">
+                <div class="flex items-start justify-between gap-2 mb-2">
+                    <h3
+                        class="video-title font-semibold text-slate-800 line-clamp-2 leading-snug group-hover:text-red-600 transition-colors">
+                    </h3>
+                    <span class="music-badge hidden shrink-0 bg-cyan-50 text-cyan-700 p-1.5 rounded-md"
+                        title="Music Category">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M9 18V5l12-2v13" />
+                            <circle cx="6" cy="18" r="3" />
+                            <circle cx="18" cy="16" r="3" />
+                        </svg>
+                    </span>
+                </div>
+
+                <div class="mt-auto pt-4 border-t border-slate-50">
+                    <div class="flex items-center gap-2 mb-2">
+                        <div class="bg-slate-100 p-1 rounded-full">
+                            <svg class="text-slate-500" xmlns="http://www.w3.org/2000/svg" width="12" height="12"
+                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2" />
+                                <circle cx="12" cy="7" r="4" />
+                            </svg>
+                        </div>
+                        <p class="channel-title text-sm font-medium text-slate-600 truncate"></p>
+                    </div>
+                    <div class="flex items-center text-xs text-slate-400 gap-3">
+                        <span class="view-count"></span>
+                        <span>•</span>
+                        <span class="publish-date"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </template>
+
+    <!-- Main Logic -->
+    <script src="app.js"></script>
 </body>
 
 </html>
