--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -151,15 +151,38 @@
                     <p id="results-count" class="text-slate-500">Showing 0 videos</p>
                 </div>
 
-                <div class="relative w-full sm:w-72">
-                    <input type="text" id="search-input" placeholder="Search titles or channels..."
-                        class="w-full pl-10 pr-4 py-2.5 bg-white border border-slate-200 rounded-xl focus:ring-2 focus:ring-red-500 focus:border-red-500 outline-none transition-all shadow-sm">
-                    <div class="absolute left-3 top-3 text-slate-400">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <circle cx="11" cy="11" r="8" />
-                            <path d="m21 21-4.3-4.3" />
-                        </svg>
+                <div class="flex flex-col sm:flex-row items-center gap-4 w-full sm:w-auto">
+                    <div class="relative w-full sm:w-48">
+                        <select id="sort-select"
+                            class="w-full pl-10 pr-4 py-2.5 bg-white border border-slate-200 rounded-xl focus:ring-2 focus:ring-red-500 focus:border-red-500 appearance-none outline-none transition-all shadow-sm text-sm font-medium text-slate-600 cursor-pointer">
+                            <option value="date-new">Recently Disliked</option>
+                            <option value="views-high">Most Views</option>
+                            <option value="channel-az">Channel (A-Z)</option>
+                            <option value="title-az">Title (A-Z)</option>
+                        </select>
+                        <div class="absolute left-3 top-3 text-slate-400 pointer-events-none">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <path d="m21 16-4 4-4-4" />
+                                <path d="M17 20V4" />
+                                <path d="m3 8 4-4 4 4" />
+                                <path d="M7 4v16" />
+                            </svg>
+                        </div>
+                    </div>
+
+                    <div class="relative w-full sm:w-64">
+                        <input type="text" id="search-input" placeholder="Search titles or channels..."
+                            class="w-full pl-10 pr-4 py-2.5 bg-white border border-slate-200 rounded-xl focus:ring-2 focus:ring-red-500 focus:border-red-500 outline-none transition-all shadow-sm">
+                        <div class="absolute left-3 top-3 text-slate-400">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <circle cx="11" cy="11" r="8" />
+                                <path d="m21 21-4.3-4.3" />
+                            </svg>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -255,8 +278,6 @@
                     </div>
                     <div class="flex items-center text-xs text-slate-400 gap-3">
                         <span class="view-count"></span>
-                        <span>•</span>
-                        <span class="publish-date"></span>
                     </div>
                 </div>
             </div>
