--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -130,7 +130,7 @@
                         d="M9 18.12 10 14H4.17a2 2 0 0 1-1.92-2.56l2.33-8A2 2 0 0 1 6.5 2H20a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.76a2 2 0 0 0-1.79 1.11L12 22h0a3.13 3.13 0 0 1-3-3.88Z" />
                 </svg>
             </div>
-            <h2 class="text-3xl font-bold text-slate-800 mb-3">Your Disliked Videos</h2>
+            <h2 class="text-3xl font-bold text-slate-800 mb-3">Your disliked videos</h2>
             <p class="text-slate-500 max-w-md mx-auto mb-8">
                 Sign in to view a list of the last 50 videos you've disliked on YouTube. This tool uses the official
                 YouTube API to fetch your private rating history.
@@ -147,7 +147,7 @@
             <!-- Controls -->
             <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center gap-4 mb-8">
                 <div>
-                    <h2 class="text-2xl font-bold text-slate-800">Recent Dislikes</h2>
+                    <h2 class="text-2xl font-bold text-slate-800">Recent dislikes</h2>
                     <p id="results-count" class="text-slate-500">Showing 0 videos</p>
                 </div>
 
@@ -155,10 +155,10 @@
                     <div class="relative w-full sm:w-48">
                         <select id="sort-select"
                             class="w-full pl-10 pr-4 py-2.5 bg-white border border-slate-200 rounded-xl focus:ring-2 focus:ring-red-500 focus:border-red-500 appearance-none outline-none transition-all shadow-sm text-sm font-medium text-slate-600 cursor-pointer">
-                            <option value="date-new">Recently Disliked</option>
-                            <option value="views-high">Most Views</option>
-                            <option value="channel-az">Channel (A-Z)</option>
-                            <option value="title-az">Title (A-Z)</option>
+                            <option value="date-new">Recently disliked</option>
+                            <option value="views-high">Most views</option>
+                            <option value="channel-az">Channel (a-z)</option>
+                            <option value="title-az">Title (a-z)</option>
                         </select>
                         <div class="absolute left-3 top-3 text-slate-400 pointer-events-none">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
@@ -211,7 +211,7 @@
             <div id="load-more-container" class="hidden flex justify-center mt-12 mb-8">
                 <button id="load-more-button"
                     class="px-6 py-2.5 bg-white border border-slate-200 text-slate-600 font-medium rounded-full shadow-sm hover:bg-slate-50 hover:text-slate-800 hover:shadow transition-all flex items-center gap-2">
-                    <span>Load More Videos</span>
+                    <span>Load more videos</span>
                     <svg id="load-more-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                         stroke-linejoin="round">
@@ -254,7 +254,7 @@
                         class="video-title font-semibold text-slate-800 line-clamp-2 leading-snug group-hover:text-red-600 transition-colors">
                     </h3>
                     <span class="music-badge hidden shrink-0 bg-cyan-50 text-cyan-700 p-1.5 rounded-md"
-                        title="Music Category">
+                        title="Music category">
                         <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M9 18V5l12-2v13" />
