--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -228,6 +228,20 @@
             <div class="relative aspect-video bg-slate-100 overflow-hidden">
                 <img class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500 video-thumbnail"
                     src="" alt="">
+                <!-- Deleted/Private Overlay -->
+                <div
+                    class="deleted-overlay hidden absolute inset-0 bg-slate-900/80 backdrop-blur-[2px] flex flex-col items-center justify-center p-4 text-center">
+                    <svg class="text-slate-400 mb-2" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                        viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <path
+                            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z" />
+                        <line x1="12" y1="9" x2="12" y2="13" />
+                        <line x1="12" y1="17" x2="12.01" y2="17" />
+                    </svg>
+                    <p class="text-white text-sm font-semibold mb-1">Content unavailable</p>
+                    <p class="text-slate-400 text-xs">This video has been deleted or set to private.</p>
+                </div>
                 <a href="" target="_blank" rel="noreferrer"
                     class="video-link absolute inset-0 bg-black/0 group-hover:bg-black/10 transition-colors flex items-center justify-center opacity-0 group-hover:opacity-100">
                     <div
