add "content type" sort, putting non-music before music

--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -160,6 +160,7 @@
                             <option value="channel-az">Channel (a-z)</option>
                             <option value="title-az">Title (a-z)</option>
                             <option value="deleted-first">Deleted first</option>
+                            <option value="content-type">Content type</option>
                         </select>
                         <div class="absolute left-3 top-3 text-slate-400 pointer-events-none">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
