--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -223,6 +223,16 @@
         </div>
     </main>
 
+    <!-- Floating Action Buttons -->
+    <button id="back-to-top"
+        class="fixed bottom-8 right-8 p-3 bg-red-600 text-white rounded-full shadow-2xl hover:bg-red-700 transition-all duration-300 transform translate-y-2 opacity-0 pointer-events-none z-50 group">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"
+            class="group-hover:-translate-y-1 transition-transform">
+            <path d="m18 15-6-6-6 6" />
+        </svg>
+    </button>
+
     <!-- Templates -->
     <template id="video-card-template">
         <div
