convert chester image to webp

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
     <div class="container">
         <a href="https://linktr.ee/jimmyorr">
-            <img src="./chester.png" alt="Chester" />
+            <img src="./chester.webp" alt="Chester" />
         </a>
         <div class="links">
             <a href="games/" class="link-games">games</a>
